--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
           <div class="card-body">
             <h2 class="card-title">@item.Title</h2>
             <p class="card-text">@item.ShortDescription
-            <a href="#" class="btn btn-primary">Read More &rarr;</a>
+            <a asp-action="BlogDetail" asp-route-id="@item.Id" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
             Posted on @item.PostedTime
