api-get-blob-image-and-created-tag-helper

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@namespace MyApp.Namespace
 @using WorksBlogProjectClient.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper WorksBlogProjectClient.TagHelpers*,WorksBlogProjectClient
