--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 
   @foreach (var item in Model)
   {<div class="card mb-4 mt-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <getblogimage id="@item.Id"></getblogimage>
           <div class="card-body">
             <h2 class="card-title">@item.Title</h2>
             <p class="card-text">@item.ShortDescription
