--- a/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,16 +1,20 @@
- @model List<CategoryListModel>
+ @model List<CategoryWithBlogsCountModel>
  <!-- Categories Widget -->
         <div class="card my-4">
           <h5 class="card-header">Categories</h5>
           <div class="row">
               <div class="col-md-12">
                 <div class="list-group">
+                  
           @foreach(var item in Model)
                     {
-                      <a asp-action="Index" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">@item.Name <span class="badge badge-success badge-pill">15</span></a>
-                    }
-                  
-                </div>
+                      <a asp-action="Index" asp-route-categoryId="@item.CategoryId" 
+                      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center
+                      @(ViewBag.ActiveCategory?.ToString()==item.CategoryId.ToString()?"active":"")
+                      ">@item.CategoryName 
+                      <span class="badge badge-success badge-pill">@item.BlogsCount</span></a>
+                    } 
+      </div>
               </div>
              
             </div>
