--- a/Views/Home/BlogDetail.cshtml
+++ b/Views/Home/BlogDetail.cshtml
@@ -16,13 +16,14 @@
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+       <getblogimage id="@Model.Id" image-show-mode="@ImageShowMode.Detail"></getblogimage>
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">
-          @Model.Description
+        
+        <p>
+          @Html.Raw(Model.Description)
         </p>
 
         <hr>
