--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@namespace MyApp.Namespace
 @using WorksBlogProjectClient.Models
+@using WorksBlogProjectClient.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper WorksBlogProjectClient.TagHelpers*,WorksBlogProjectClient
