--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,11 +33,8 @@
       <div class="sidebar-heading">Start Bootstrap </div>
       <div class="list-group list-group-flush">
         <a asp-action="Index" asp-controller="Blog" asp-area="Admin" class="list-group-item list-group-item-action  @(active=="blog"?"active":"")">Blog</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a asp-action="Index" asp-controller="Category" asp-area="Admin" class="list-group-item list-group-item-action  @(active=="category"?"active":"")">Category</a>
+        
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
